--- a/sk2.html
+++ b/sk2.html
@@ -4112,4 +4112,114 @@ PS3L&rarr;		PS&gamma;&#9635;LSP,PS&beta;
 [meta file_name=102726903-05-02-acc.pdf pdf_page=106 doc_page=256 type=code]
 [Page header: "HHL LYUO 016"]
 
+		HDIF|VA<sub>P</sub><sub>S</sub><sub>&Delta;</sub>,PSNPS<sub>P</sub><sub>S</sub><sub>&alpha;</sub>
+		MUL PSTS
+		NAB { 0}
+		JPA PS3R
+		HDIF|VA+1<sub>P</sub><sub>S</sub><sub>&gamma;</sub>,PSNPS+1<sub>P</sub><sub>S</sub><sub>&alpha;</sub>&rarr;PSTS
+		HDIF|VA+1<sub>P</sub><sub>S</sub><sub>&Delta;</sub>,PSNPS<sub>P</sub><sub>S</sub><sub>&alpha;</sub>+1
+		MUL PSTS
+		NAB { 0}
+		JPA PS3R
+		JPQ PS3X
+PS3R&rarr;		RSX <sub>P</sub><sub>S</sub><sub>&beta;</sub> PSNNPS
+		DEX <sub>P</sub><sub>S</sub><sub>&beta;</sub> 3
+		SXG <sub>P</sub><sub>S</sub><sub>&beta;</sub> 0
+		JPQ PSATPEN
+		DPX <sub>P</sub><sub>S</sub><sub>&beta;</sub> PSNNPS
+		SXD <sub>P</sub><sub>S</sub><sub>&beta;</sub><sub>|</sub><sub>P</sub><sub>S</sub><sub>&alpha;</sub> 0
+		JPQ PS3X
+		LDAE&equiv;PSNPS<sub>P</sub><sub>S</sub><sub>&beta;</sub>,1,2,3
+		STAE&equiv;PSNPS<sub>P</sub><sub>S</sub><sub>&alpha;</sub>,1,2,3
+		JPQ PS3X
+PS3C&rarr;		PS&gamma;&#9635;CSP,PS&beta;
+		PS&gamma;&#9635;CIRCEN,PS&beta;
+		DIREC&equiv;VA<sub>P</sub><sub>S</sub><sub>&gamma;</sub>&rarr;VA<sub>P</sub><sub>S</sub><sub>&Delta;</sub>=PSTS&rarr;PS3R
+		DIREC&equiv;PSNPS<sub>P</sub><sub>S</sub><sub>&alpha;</sub>&rarr;VA<sub>P</sub><sub>S</sub><sub>&Delta;</sub>=PSTT&rarr;PS3R
+		SUB PSTS
+		LDB LIST+CVAL<sub>P</sub><sub>S</sub><sub>&beta;</sub>
+		SKZ <sub>4</sub><sub>.</sub><sub>9</sub> B
+		COM A
+		JPA #+3
+		JNA #+2
+		DPX A
+		DPX B
+		CAB {-1,}
+		STA PSTS
+		LDA <sub>P</sub><sub>S</sub><sub>&beta;</sub> LIST+CVAL
+		JPA #+2
+		COM A
+		SUB PSTS
+		JNA PS3R
+PS3X&rarr;		<sup>-</sup><sup>4</sup>JPX <sub>P</sub><sub>S</sub><sub>&alpha;</sub> PS3A
+PS4&rarr;		RSX <sub>P</sub><sub>S</sub><sub>&alpha;</sub> PSNNPS
+		SXG <sub>P</sub><sub>S</sub><sub>&alpha;</sub> 0
+		JPQ PSATPEN
+		SXD <sub>P</sub><sub>S</sub><sub>&alpha;</sub> 4
+		JPQ PSAL
+		SXD <sub>P</sub><sub>S</sub><sub>&alpha;</sub> 10
+		JPQ PS5		**AT INTERSECTION
+		JPQ PSATPEN	**TOO MUCH CLUTTER
+PS5&rarr;		<sup>2</sup>RSX <sub>P</sub><sub>S</sub><sub>&alpha;</sub> PSNPS+3
+		<sup>2</sup>RSX <sub>P</sub><sub>S</sub><sub>&beta;</sub> PSNPS+3+4
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=107 doc_page=257 type=code]
+[Page header: "HHL LYUO 017"]
+
+		SXD <sub>P</sub><sub>S</sub><sub>&alpha;</sub> CIRCLES-LIST
+		JPQ PS5C
+		SXD <sub>P</sub><sub>S</sub><sub>&alpha;</sub> LINES-LIST
+		JPQ PS5L
+		ERROR&equiv;PS&alpha;&rarr;PSATPEN1
+PS5L&rarr;		SXD <sub>P</sub><sub>S</sub><sub>&beta;</sub> LINES-LIST
+		JPQ PS5LL
+		SXD <sub>P</sub><sub>S</sub><sub>&beta;</sub> CIRCLES-LIST
+		JPQ #+2
+		ERROR&equiv;PS&beta;&rarr;PSATPEN1
+		RSX <sub>P</sub><sub>S</sub><sub>&alpha;</sub> PSNPS+3
+		RSX <sub>P</sub><sub>S</sub><sub>&beta;</sub> PSNPS+3+4
+		JPQ PS5LC
+PS5C&rarr;		SXD <sub>P</sub><sub>S</sub><sub>&beta;</sub> CIRCLES-LIST
+		JPQ PS5CC
+		SXD <sub>P</sub><sub>S</sub><sub>&beta;</sub> LINES-LIST
+		JPQ #+2
+		ERROR&equiv;PS&beta;&rarr;PSATPEN1
+		RSX <sub>P</sub><sub>S</sub><sub>&alpha;</sub> PSNPS+3+4
+		RSX <sub>P</sub><sub>S</sub><sub>&beta;</sub> PSNPS+3
+		JPQ PS5LC
+PS5CC&rarr;		RSX <sub>P</sub><sub>S</sub><sub>&alpha;</sub> PSNPS+3
+		RSX <sub>P</sub><sub>S</sub><sub>&beta;</sub> PSNPS+3+4
+		MOVE|{ 100,,2}&rarr;PSTSEE
+		CCCROSS&equiv;PS&alpha;&rarr;PS&beta;=PSX1&rarr;PS6,PS61
+		STC PSX2
+		STD PSY2
+PS5CH&rarr;		PYTH&equiv;PENLOC&rarr;PSX1=PSTS&rarr;PS5CC3
+		STA PSTS
+PS5CC2A&rarr;
+		PYTH&equiv;PENLOC&rarr;PSX2=PSTT&rarr;PS5CC4
+		SUB PSTS
+		JNA PS5CC3
+PS5CC4&rarr;		LDA PSX1	[5 in PS5CC4 is not quite legible, guessing]
+		LDB PSY1
+		JPQ #+3
+PS5CC3&rarr;		LDA PSX2	[3 in PS5CC3 is not quite legible, guessing]
+		LDB PSY2
+PS5NE&rarr;		STA PSX1
+		STB PSY1
+		PROD&equiv;{PSPENISIZE&rarr; PENISIZE,,0}&times;SCSZ=PSSEESIZE [syntax]
+		[blank line in the listing, not clear if intentional]
+		PYTH&equiv;PENLOC&rarr;PSX1=PSTS&rarr;PS6
+		SUB PSSEESIZE
+		JPA PSAL
+		SCNORM|PSX1=PSTS&rarr;PS6
+		SCNORM|PSY1&rarr;1=PSTS&rarr;PS6	[syntax on these two lines, handling of missing arguments]
+		LDA PSX1
+		LDB PSY1
+		hSTA PSPL
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=108 doc_page=258 type=code]
+[Page header: "HHL LYUO 020"]
+
 </code></pre></body></html>
