--- a/sk2.html
+++ b/sk2.html
@@ -4846,4 +4846,171 @@ UNITSX&rarr;		JPQ #
 [meta file_name=102726903-05-02-acc.pdf pdf_page=126 doc_page=276 type=main]
 [Page header: "LMH Y3HT 001"]
 
+SQ60A&rarr;		CSQ<sub>6</sub><sub>0</sub>
+		<sup>1</sup>IOS <sub>6</sub><sub>0</sub> 30010
+		RSX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SNDISP
+		SXG <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 0
+		JPQ S1NULL
+		SXL <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 50
+		JPQ #+2
+		JPQ SQ60FEW
+		SKN INTERLACE
+		JPQ SQ60D	**DIRECT
+SQ60I&rarr;		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60IA
+		JPQ SQ60SEE
+SQ60IA&rarr;		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>1</sub><sub>&beta;</sub>#+2
+		REX <sub>S</sub><sub>1</sub><sub>&beta;</sub> LACE-1
+		SXL <sub>S</sub><sub>1</sub><sub>&beta;</sub> LACE
+		REX <sub>S</sub><sub>1</sub><sub>&beta;</sub> LACE-1
+		SKZ RINTERLACE
+		JPQ SQ60IR
+		DEX <sub>S</sub><sub>1</sub><sub>&alpha;</sub><sub>|</sub><sub>S</sub><sub>1</sub><sub>&beta;</sub>
+		JNX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60IS-2
+SQ60IB&rarr;		SXL <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 7&times;LACE
+		JPQ SQ60IS
+SQ60IC&rarr;		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		DEX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> LACE-1
+		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60IC
+		JPX <sub>S</sub><sub>1</sub><sub>&beta;</sub> SQ60A
+		JPQ SQ60SEE
+SQ60IS&rarr;
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(0&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(1&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(2&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(3&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(4&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(5&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(6&times;LACE)
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE-(7&times;LACE)
+		DEX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 10&times;LACE
+		SXL <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 7&times;LACE
+		JPQ SQ60IS
+		JNX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60IS-2
+		JPQ SQ60IC
+SQ60IR&rarr;		DEX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 0	**RANDOM DECREASE
+		RXF <sub>6</sub><sub>1</sub> SQ60IRR
+		JPQ SQ60IB
+SQ60IRR&rarr;
+		<sup>1</sup>IOS <sub>6</sub><sub>1</sub> 30000
+		<sup>3</sup>TSD SCRAMX
+		hLDE SCRAMX
+		hITE { LACE-1⋁(LACE-1/2)⋁(LACE-1/4)⋁(LACE-1/10)⋁(LACE-1/20)}
+		RSX <sub>S</sub><sub>C</sub><sub>&alpha;</sub> E
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=127 doc_page=277 type=main]
+[Page header: "LMH Y3HT 002"]
+
+		SXL <sub>S</sub><sub>C</sub><sub>&alpha;</sub> LACE
+		JPQ SQ60IRR+1
+		SXD <sub>S</sub><sub>C</sub><sub>&alpha;</sub> 0
+		REX <sub>S</sub><sub>C</sub><sub>&alpha;</sub>
+		<sup>1</sup>DPX <sub>S</sub><sub>C</sub><sub>&alpha;</sub> SQ60IR
+		JPD SCRAMBLE
+SQ60D&rarr;		<sup>1</sup>DPX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60D3
+		DEX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 7
+		<sup>1</sup>DPX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60D2
+		REX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 0
+SQ60D1&rarr;
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+1
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+2
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+3
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+4
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+5
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+6
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE+7
+		INX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 10
+SQ60D2&rarr;		SXL <sub>S</sub><sub>1</sub><sub>&alpha;</sub>#	**N-7
+		JPQ SQ60D3
+		JPQ SQ60D1
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		INX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 1
+SQ60D3&rarr;		SXL <sub>S</sub><sub>1</sub><sub>&alpha;</sub>#	**N
+		JPQ SQ60SEE
+		JPQ #-4
+SQ60FEW&rarr;
+		JPQ SQ60FEWX
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+		TSD <sub>S</sub><sub>1</sub><sub>&alpha;</sub> DISPLAY FILE
+SQ60FEWX&rarr;
+		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> SQ60FEW+1
+		JPQ SQ60SEE
+S1NULL&rarr;		REX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> 22
+S1NULL1&rarr;
+		MOVE|S1INK<sub>S</sub><sub>1</sub><sub>&alpha;</sub>&rarr;S1DISPLAY
+		MOVE|S1INK+1<sub>S</sub><sub>1</sub><sub>&alpha;</sub>&rarr;S1INC
+		MOVE|S1INK+2<sub>S</sub><sub>1</sub><sub>&alpha;</sub>&rarr;S1STEPS
+		RSX <sub>S</sub><sub>1</sub><sub>&beta;</sub> S1STEPS
+		RSX <sub>S</sub><sub>1</sub><sub>&gamma;</sub> S1INC
+		RSX <sub>S</sub><sub>1</sub><sub>x</sub> S1INC<sup>2</sup>	[syntax, superscript at the end]
+		TSD S1DISPLAY
+		<sup>1</sup>ADX <sub>S</sub><sub>1</sub><sub>&gamma;</sub> S1DISPLAY
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=128 doc_page=278 type=main]
+[Page header: "LMH Y3HT 003"]
+
+		<sup>2</sup>ADX <sub>S</sub><sub>1</sub><sub>x</sub> S1DISPLAY
+		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>1</sub><sub>&beta;</sub>#-3
+		<sup>-</sup><sup>3</sup>JPX <sub>S</sub><sub>1</sub><sub>&alpha;</sub> S1NULL1
+		JPQ SQ60A
+SCRAMBLE&rarr;
+		CSQ<sub>6</sub><sub>1</sub>
+		<sup>1</sup>IOS <sub>6</sub><sub>1</sub> 30000
+		RSX <sub>S</sub><sub>C</sub><sub>&alpha;</sub> SNDISP
+		RSX <sub>S</sub><sub>C</sub><sub>&beta;</sub> SNDISP
+		JPQ SCRAMX
+SCRAM&rarr;		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>1</sub><sub>&beta;</sub> SCRAMER
+		AUX <sub>S</sub><sub>C</sub><sub>&beta;</sub> SNDISP
+		JPX <sub>S</sub><sub>C</sub><sub>&beta;</sub> SCRAMER
+		JPD SCRAMBLE
+SCRAMER&rarr;
+		SKN TWINKLE
+		JPD SCRAMBLE
+		hLDE <sub>S</sub><sub>C</sub><sub>&beta;</sub> DISPLAY FILE
+		STE SCRAMN
+		hLDE <sub>S</sub><sub>C</sub><sub>&alpha;</sub> DISPLAY FILE
+		hSTE <sub>S</sub><sub>C</sub><sub>&beta;</sub> DISPLAY FILE
+		hLDE SCRAMN
+		STE <sub>S</sub><sub>C</sub><sub>&alpha;</sub> DISPLAY FILE
+SCRAMX&rarr;		DEX <sub>S</sub><sub>C</sub><sub>&beta;</sub> 0
+		<sup>3</sup>TSD #-1
+		<sup>-</sup><sup>1</sup>JPX <sub>S</sub><sub>C</sub><sub>&alpha;</sub> SCRAM
+		JPD SCRAMBLE
+CMSCSZ&rarr;		770,,
+[This label is refenced in all programs, but only defined here]
+SCSZ&rarr;		1,
+PMAG&rarr;		<sup>1</sup>STE PMAGEXIT
+		MOVE|200034&rarr;SCSZ
+		SCNORM|PMAGPOINT+1&rarr;1=PMAGY&rarr;PMAGEXIT
+		NORMALIZE|PMAGPOINT&rarr;SCCEN/SCSZ&rarr;PMAGEXIT
+		<sup>2</sup>LDA PMAGY
+		ITA CMMASK
+		ADD PMAGNAME
+		RSX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> NDISP
+		INX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> 10
+		SXL <sub>C</sub><sub>M</sub><sub>&alpha;</sub> DISPLAYFILESIZE
+		ERROR&equiv;CM&alpha;&rarr;PMAGEXIT
+		DPX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> NDISP
+		REX <sub>C</sub><sub>M</sub><sub>&beta;</sub> 7
+		DEX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> 1
+		STA <sub>C</sub><sub>M</sub><sub>&alpha;</sub> DISPLAY FILE
+		<sup>-</sup><sup>1</sup>JPX <sub>C</sub><sub>M</sub><sub>&beta;</sub>#-2
+PMAGEXIT&rarr;
+		JPQ #
+CMAG&rarr;		<sup>1</sup>STE CMEXIT
+		MOVE|CMNAME&rarr;CMNAME1
+		LDA 200034
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=129 doc_page=279 type=main]
+[Page header: "LMH Y3HT 004"]
+
 </code></pre></body></html>
