--- a/sk2.html
+++ b/sk2.html
@@ -5013,4 +5013,60 @@ CMAG&rarr;		<sup>1</sup>STE CMEXIT
 [meta file_name=102726903-05-02-acc.pdf pdf_page=129 doc_page=279 type=main]
 [Page header: "LMH Y3HT 004"]
 
+		STA SCSZ
+		MUL { CMSSCSZ,,}
+		STA CMSCSZ
+		PYTH&equiv;CMCEN&rarr;CMSTART=CMRAD&rarr;BADOV
+		ADD CMSCSZ	**SCOPE SIZE FOR CIRCLES
+		hJOV BADOV	**CIRCLE IS TO BIG [sic]
+CMAG1&rarr;		DIFF&equiv;CMCEN&rarr;SCCEN=CMXRCEN&rarr;CMEXIT
+		FABVAL&rarr;CMMRCEN	**|X CENTER|
+		DIFF&equiv;CMCEN+1&rarr;SCCEN+1=CMYRCEN&rarr;CMEXIT
+		FABVAL&rarr;CMTS
+		SUB CMMRCEN
+		JNA #+3
+		LDA CMTS
+		STA CMMRCEN	**MAX CENTER DIST
+CMAG2&rarr;		LDA CMMRCEN
+		SUB CMRAD	**MAXCEN-R>SCSZ?
+		JNA CMAG2A+1	**CIRCLE TOO SMALL
+		STA CMTS
+		SUB CMSCSZ
+		JNA CMAG2A
+		JPQ CMEXIT
+CMAG2A&rarr;		LDA CMTS	**MAXCEN-R<1.5 SCSZ
+		LDB CMMRCEN
+		SCB {-1,}
+		ADD B
+		JOB CMAG2B
+		LDB CMSCSZ
+		SCB {-1,}
+		ADD B
+		JOV CMEXIT
+		ADD CMSCSZ
+		JOV CMEXIT
+		JNA CMEXIT
+CMAG2B&rarr;		LDA CMMRCEN
+		ADD CMRAD
+		JOV CMAG3
+		SUB CMSCSZ
+		JPA CMAG3
+		JPQ CMALLON
+CMAG3&rarr;		LDA { CMMINRAD}	**IS RAD TINY?
+		MUL SCSZ
+		SUB CMRAD
+		JPA CMDAD
+		LDA CMANG	**IS ANGLE TINY?
+		JPA #+4
+		JNA #+2
+		JPQ CMDAD
+		COM A
+		STA CMSTOPA
+		MUL CMRAD	**ARCLENGTH/2TH
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=130 doc_page=280 type=main]
+[Page header: "LMH Y3HT 005"]
+
+
 </code></pre></body></html>
